First, untested implementation of separation between data and UI.